lab2fix